--- a/WhatsAppCleanUp/res/values/strings.xml
+++ b/WhatsAppCleanUp/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <string name="app_name">WhatsAppCleanUp</string>
+    <string name="app_name">CleanUpWhatsApp</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">CleanUpWhatsApp</string>
 
 </resources>
